# youtube_search_bot

./: .env  .gitignore  Cargo.toml  Procfile  README.md
crates/: secret.json
crates/app/: Cargo.toml
crates/app/src/: bot.rs  formatting.rs  lib.rs  net.rs
crates/bot_bin/: Cargo.toml
crates/bot_bin/src/: main.rs
crates/bot_lib/: Cargo.toml  build.rs
crates/bot_lib/src/: auth_server.rs  commands.rs  db.rs  dialogue.rs  errors.rs  lib.rs  net.rs  utils.rs  youtube.rs
crates/bot_lib/src/commands/: funcs.rs
crates/bot_lib/src/dialogue/: callback_handling.rs  funcs.rs  text_handling.rs  types.rs
crates/bot_lib/src/keyboards/: funcs.rs  traits.rs  types.rs
crates/bot_lib/src/mods/: auth_server.rs  commands.rs  db.rs  dialogue.rs  errors.rs  net.rs  utils.rs  youtube.rs
crates/bot_lib/src/mods/commands/: funcs.rs
crates/bot_lib/src/mods/dialogue/: callback_handling.rs  funcs.rs  helpers.rs  text_handling.rs  types.rs
crates/bot_lib/src/mods/inline_keyboards/: funcs.rs  traits.rs  types.rs
crates/bot_lib/src/mods/keyboards/: funcs.rs  traits.rs  types.rs
crates/bot_lib/src/mods/net/: traits.rs
crates/bot_lib/src/mods/youtube/: funcs.rs  helpers.rs  traits.rs  types.rs
crates/bot_lib/src/net/: traits.rs
crates/bot_lib/src/youtube/: traits.rs  types.rs
crates/conv_to_report/: Cargo.toml
crates/conv_to_report/src/: lib.rs
crates/error_traits/: Cargo.toml
crates/error_traits/src/: err_stack_ext.rs  lib.rs  log_err.rs
crates/internal/: Cargo.toml
crates/internal/src/: auth_server.rs  commands.rs  db.rs  lib.rs  utils.rs  youtube.rs
crates/internal/src/controllers/: callback.rs  commands.rs  text.rs
crates/internal/src/dialogue/: text_handling.rs
crates/internal/src/keyboards/: funcs.rs
crates/internal/src/model/: auth_server.rs  db.rs  errors.rs  mod.rs  utils.rs
crates/internal/src/model/commands/: funcs.rs  types.rs
crates/internal/src/model/dialogue/: funcs.rs  types.rs
crates/internal/src/model/handlers/: callback.rs  commands.rs  text.rs
crates/internal/src/model/handlers/callback/: common.rs  list_cmd.rs  search_cmd.rs  search_videos_in_playlits.rs
crates/internal/src/model/keyboards/: funcs.rs  traits.rs  types.rs
crates/internal/src/model/net/: funcs.rs  traits.rs  types.rs
crates/internal/src/model/youtube/: funcs.rs  traits.rs  types.rs
crates/internal/src/model/youtube/funcs/: common.rs  list_cmd.rs  search_cmd.rs  search_videos_in_playlists.rs
crates/internal/src/net/: traits.rs
crates/internal/src/view/: funcs.rs  types.rs
crates/internal/src/youtube/: traits.rs  types.rs
crates/local/error_traits/: README.md
crates/local/error_traits/src/: err_stack_ext.rs  lib.rs  log_err.rs
test_assets/: playlist_list_json_response.json  subscription_list_json_response.json
