[workspace]
resolver = "2"
members = ["crates/*"]
#exclude = ["crates/local"]
#default-members = ["crates/internal"]

[profile.release]
codegen-units = 1
lto = true
#strip = true
#panic = "abort"

#[workspace.dependencies]
#conv_to_report = { path = "crates/conv_to_report" }
#internal = { path = "crates/internal" }
