[package]
name = "bot_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#====[ Local ]====
bot_lib = { path = "../bot_lib" }

#====[ Main ]====
teloxide = { version = "0.11.2", features = ["webhooks-axum", "redis-storage"] }

#====[ Net ]====
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.13"

#====[ Errors ]====
eyre = { version = "0.6.8", features = [] }

#====[ Logging ]====
log = "0.4.17"
simple_logger = { version = "4.0.0", features = [] }


