[package]
name = "error_traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#[:: Main ::]
error-stack = { version = "0.3.1", features = ["anyhow"], optional = true }
anyhow = { version = "1.0.70", optional = true }
log = { version = "0.4.17", optional = true }

[features]
error_stack_dyn_ext = ["dep:error-stack", "dep:anyhow"]
log_err = ["dep:log"]


